--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --watch --mode=development"
+    "start": "webpack --watch --mode=development",
+    "postinstall": "webpack"
   },
   "repository": {
     "type": "git",
@@ -37,5 +38,9 @@
   "bugs": {
     "url": "https://github.com/johnnyhoang510/Smackin/issues"
   },
-  "homepage": "https://github.com/johnnyhoang510/Smackin#readme"
+  "homepage": "https://github.com/johnnyhoang510/Smackin#readme",
+  "engines": {
+    "node": "14.19.0",
+    "npm": "6.14.16"
+  }
 }
