--- a/test/fixtures/reviews.yml
+++ b/test/fixtures/reviews.yml
@@ -1,4 +1,15 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: reviews
+#
+#  id          :bigint           not null, primary key
+#  rating      :integer          not null
+#  body        :string           not null
+#  user_id     :integer          not null
+#  business_id :integer          not null
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#
 
 # This model initially had no columns defined. If you add columns to the
 # model remove the '{}' from the fixture names and add the columns immediately
